# Genetic-motifs

Genetic_motifs/: CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake
Genetic_motifs/src/: Timer.h  extension.cpp  extension.h  main.cpp  motifs.cpp  motifs.h  pwm.cpp  pwm.h  reader.cpp  reader.h  reading.cpp  simulation.cpp  simulation.h
Genetic_motifs/tests/: Timer.h  motifs_fasta_test.cpp  testClassMotifs.h  test_extension.cpp  test_motifs.cpp  test_pwm.cpp  treader.cpp  treader.h
Genetic_motifs/tests/files/: BMAL1_chr7.bed  bed3cols.bed  fasta_bed.bed  promoters.fasta  test_file.fa  test_matrix.cvs
Genetic_motifs/tests/files/fasta_testfiles/: seq2.fa  seq3.fa  seq4.fa
